# yukarin_s

./: Dockerfile  pyproject.toml  requirements.txt
yukarin_s/: config.py  dataset.py  model.py  trainer.py
yukarin_s/network/: predictor.py
